--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   "type": "commonjs",
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
-    "dotenv": "^17.2.3"
+    "@vitalets/google-translate-api": "^9.2.1",
+    "cheerio": "^1.2.0",
+    "csv-parser": "^3.2.0",
+    "dotenv": "^17.2.4",
+    "i18n-iso-countries": "^7.14.0",
+    "node-cron": "^4.2.1",
+    "uuid": "^13.0.0"
   }
 }
